M1 - UPC (diderot)/S7 - Compilation (+LP)/S7 - compilation-m1-2021-master (1)/compilation-m1-2021-master/flap/tests/01-Parsing/117-for-2.good.expected
Line 2, characters 8-10: Error (parsing)
  Syntax error.
